--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "project",
-  "version": "0.0.0",
-  "description": "",
+  "name": "kanso",
+  "version": "1.0.0",
+  "description": "Kanso notetaker",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "BSD",
+  "author": "jp",
+  "license": "ISC",
   "devDependencies": {
-    "gulp-concat": "~2.6.0",
-    "gulp": "~3.9.1",
-    "gulp-htmlmin": "~1.3.0",
-    "gulp-jade": "~1.1.0",
-    "gulp-uglify": "~1.5.3",
-    "gulp-if": "~2.0.0",
-    "gulp-sass": "~2.2.0"
+    "browser-sync": "^2.12.5",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7"
   }
 }
